# arxiv_confi

./: (법령안) 인공지능 발전과 신뢰 기반 조성 등에 관한 기본법 시행령 제정(안).hwpx  (조문별 제개정 이유서) 인공지능 발전과 신뢰 기반 조성 등에 관한 기본법 시행령 제정(안).hwpx  2026학년도_자기소개서_250925.hwp  250813 KARS 프로젝트 개발환경 및 데이터 사용 관련.docx  AI 기반 광고문구 규제 검토 시스템 (PoC).docx  AI&IT 시스템 센터의 문제점과 개선 방향.docx  ENVIRONMENT_REPORT_251205  JS_WORK-#2224023-v1-AI평가가이드라인.docx  KC AI TF 전체 구성.docx  M&A LLM 평가 데이터셋 라벨링 가이드라인.docx  README.md  SY_WORK-#7489823-v4D-글로벌_AI_규제_동향_정리.DOCX  SY_WORK-#8016574-v1B-SASB_지표정의_v1_2.XLSX  SY_WORK-#8016574-v1B-SASB_지표정의_v1_2_10+11번.XLSX  SY_WORK-#8016574-v1B-SASB_지표정의_v1_2_251118.XLSX  SY_WORK-#8055689-v1A-_SASB__프롬프트_예시.DOCX  SY_WORK-#8062107-v1A-국가법령정보센터_산업군별빈출예상법령_리서치메모.DOCX  SY_WORK-#8127286-v1-AI_데이터_센터_리서치_메모.docx  Talking Point_인공지능기본법 시행령 제정안 및 고영향 AI 판단 가이드라인.docx  [AI&IT System Center] ACL 2025 참석 리포트 (GPT-oriented note).docx  b-s-frndly_251204  etu_logging.md  hmc s-ioc 전 질의사항.docx  kasb_gss_request.md  kasb_통계분석_메일답장_초안.md  phdkim_mail.md  phdkim_mail_v2.md  spa_buyer_seller_score_+sw.xlsx  spa_buyer_seller_score_hw.xlsx  test_extract_value_tool.py  tmp_aiuser5_check.md  tmp_memo.md  그린워싱_aisc정리 - 복사본.docx  김앤장 법률사무소 AI 관련 문제점 및 개선 방향.docx  다이어트 계약서.docx  법률인공지능 구축시 레이블링 방법과 절차 소개.docx
4대회계법인_컨설팅펌_AI센터/: 컨설팅펌 AI센터 동향_03.PPTX  (+4 more)
kars-data-ingestion-pipeline/: README.md  base.py  config.env.sample  main.py  pipeline_engine.py  pyproject.toml  simple_manager.py  test_baseline.py  test_ingestion.py  test_raganything_env.sh  weaviate_db.py
(+199 files in other folders)
